--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
-      <img src="images/image-equilibrium.jpg" alt="">
+      <div class="img-container">
+        <img src="./images/image-equilibrium.jpg" alt="">
+        <div class="view">
+          <img src="./images/icon-view.svg" alt="">
+        </div>
+      </div>
       <div class="content">
-        <h2> Equilibrium #3429</h2>
+        <label>Equilibrium #3429</label> 
         <p>Our Equilibrium collection promotes balance and calm.</p>
         <p><span><img src="./images/icon-ethereum.svg" alt=""></span><span class="cyan"> 0.041 ETH</span> <span><img src="./images/icon-clock.svg" alt=""></span> ETH  3 days left</p>
         <div class="creator">
           <img src="./images/image-avatar.png" alt="">
-          <p><span>Creation of</span> Jules Wyvern</p>
+          <p>Creation of<span> Jules Wyvern</span></p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Shawn Radebe</a>.
-  </div>
+  </footer>
 </body>
 </html>
